# cv_bundle

./: CMakeLists.txt  README.md  package.xml
msg/: CV_msg.msg
scripts/: detector.py  visualizer.py
src/: detector.cpp
